--- a/Assets/3DS/client.ini
+++ b/Assets/3DS/client.ini
@@ -1,8 +1,7 @@
 [CLIENT_0]
 ID = "763839850193092628"
 
-
-T_000 = "[Custom Title]"
+T_000 = "%CUSTOM%"
 T_001 = "PictoChat"
 T_002 = "Flipnote Studio"
 T_003 = "Mario Kart DS"
@@ -38,8 +37,3 @@ T_032 = "Brain Age: Train Your Brain in Minutes a Day!"
 T_033 = "Mario & Luigi: Partners in Time"
 T_034 = "Mario & Luigi: Bowser's Inside Story"
 T_035 = "Yoshi's Island DS"
-
-[RPU_PRESET]
-PRESET_000 = "[TITLE]"
-PRESET_001 = "Chatting "
-PRESET_002 = "Drawing "
